RESOLVED FIXED212029
[Wheel event region] Invalidation for root style
https://bugs.webkit.org/show_bug.cgi?id=212029
Summary [Wheel event region] Invalidation for root style
Antti Koivisto
Reported 2020-05-18 09:39:15 PDT
We should invalidate when event listeners change on Document or Window.
Attachments
patch (14.45 KB, patch)
2020-05-18 09:48 PDT, Antti Koivisto
no flags
patch (14.45 KB, patch)
2020-05-18 09:57 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-05-18 09:48:26 PDT
Antti Koivisto
Comment 2 2020-05-18 09:57:56 PDT
Simon Fraser (smfr)
Comment 3 2020-05-18 10:20:48 PDT
Comment on attachment 399652 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=399652&action=review > LayoutTests/fast/scrolling/mac/wheel-event-listener-region-root-invalidation.html:27 > + document.body.offsetLeft; internals.layerTreeAsText triggers layout so I don't think this should be needed.
EWS
Comment 4 2020-05-18 10:50:16 PDT
Committed r261820: <https://trac.webkit.org/changeset/261820> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399652 [details].
Radar WebKit Bug Importer
Comment 5 2020-05-18 10:51:15 PDT
Note You need to log in before you can comment on or make changes to this bug.