[Wheel event region] Invalidation for root style https://bugs.webkit.org/show_bug.cgi?id=212029

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/scrolling/mac/wheel-event-listener-region-root-invalidation.html

Invalidate the region when event listeners change on Document or Window.

* dom/Document.cpp:
(WebCore::Document::invalidateEventListenerRegions):
* dom/Document.h:
(isType):
* dom/Element.cpp:
(WebCore::Element::invalidateEventListenerRegions):
* dom/Element.h:
* dom/EventTarget.cpp:
(WebCore::EventTarget::addEventListener):
(WebCore::EventTarget::removeEventListener):
(WebCore::EventTarget::removeAllEventListeners):
(WebCore::EventTarget::invalidateEventListenerRegions):
* dom/EventTarget.h:
* style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustEventListenerRegionTypesForRootStyle):
* style/StyleAdjuster.h:
* style/StyleResolveForDocument.cpp:
(WebCore::Style::resolveForDocument):

LayoutTests:

* fast/scrolling/mac/wheel-event-listener-region-root-invalidation-expected.txt: Added.
* fast/scrolling/mac/wheel-event-listener-region-root-invalidation.html: Added.


Canonical link: https://commits.webkit.org/224911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261820 268f45cc-cd09-0410-ab3c-d52691b4dbfc