Source/WebCore/style/StyleResolveForDocument.cpp
@@ -30,7 +30,6 @@
 #include "StyleResolveForDocument.h"
 
 #include "CSSFontSelector.h"
-#include "DOMWindow.h"
 #include "Document.h"
 #include "FontCascade.h"
 #include "Frame.h"
@@ -74,11 +73,7 @@ RenderStyle resolveForDocument(const Document& document)
         documentStyle.setTextSizeAdjust(TextSizeAdjustment(NoTextSizeAdjustment));
 #endif
 
-    auto regionTypes = Adjuster::computeEventListenerRegionTypes(document, { });
-    if (auto* window = document.domWindow())
-        regionTypes.add(Adjuster::computeEventListenerRegionTypes(*window, { }));
-
-    documentStyle.setEventListenerRegionTypes(regionTypes);
+    Adjuster::adjustEventListenerRegionTypesForRootStyle(documentStyle, document);
 
     Element* docElement = document.documentElement();
     RenderObject* docElementRenderer = docElement ? docElement->renderer() : nullptr;
